Integrate week 8 journal

--- a/index.html
+++ b/index.html
@@ -3223,7 +3223,7 @@ h5 {
             <em>“I was called Mel once. Thank you for saving me. I am in your
                 debt.”</em> </p>
             <p>
-            <em>“I had a name once, but now I am Elusurm. Do you know where the
+            <em>“I had a name once, it was Zoltano. Do you know where the
                 ostium is?”</em> </p>
             <p>
             Verthandi’s tentacles perked up at the name. He thought it was the
@@ -3244,7 +3244,7 @@ h5 {
             <p>
             <em>“It’s inside of her,”</em> said Verthandi. The others had come
             to the same conclusion.  Ripping it out of her probably wouldn’t be
-            a issue, but Verthandi assumed that Feuriel and Elusurm would
+            a issue, but Verthandi assumed that Feuriel and the broken man would
             probably object, especially if it killed her, which it probably
             would. Besides, their job wasn’t to find the ostium, but rather
             just explore this area to see if it was here. They did. It wasn’t.
@@ -3303,6 +3303,163 @@ h5 {
             It was almost a relief when the ship was attacked.
             </p>
 
+            <h3 class="break">Week 8 - A Boatload of Demons</h3>
+            <strong><em>as observed by Feurial (Jay Pancoast)</em></strong>
+            <p>
+            It had been a day or two of miserable sailing on the River Styx, on
+            the ship they had come to know as the Handbasket. The band was
+            quiet, keeping their thoughts to themselves, as usual. There was
+            too much yet to understand, and too much risk in discussing it
+            here. And so the hours dragged on, until...
+            </p>
+            <p>
+            <em>“Listen!”</em> said Aldoon, <em>“Do you smell something?”</em>
+            </p>
+            <p>
+            Sure enough, there was a new stench in the air. It was not the
+            noxious brimstone of Hell, but something differently evil, almost
+            sweet: decay, feces, with a sharp tang of bile. Demons.
+            </p>
+            <p>
+            <em>“A ship approaches!”</em> someone called out. And in no time it
+            was visible to the rest of those onboard. A galley as large as
+            Orgoth’s own not-so-beautiful ship emerged from the crimson mists
+            as it came around a bend in the River Styx. Its decks were packed
+            with the brutes of the Abyss, demons known as dretch. At its helm
+            was a creature unknown to most, a merrenoloth which seemed to
+            control the huge ship with just a wave of its fiendish hand.
+            </p>
+            <p>
+            Swirling in darkness, the faceless captain of the demonic crew, a
+            shadow demon, hissed its orders to the dretch in their Abyssal
+            language, <em>“Attack! Kill them all, or die trying!”</em>
+            </p>
+            <p>
+            Aboard the Handbasket, Enkosee’s slaves and servants took up battle
+            positions. The elite band of adventurers who had been bound by the
+            Call of the Inferno reacted with a decisive effectiveness that took
+            Orlath by surprise as he jeered his deckhands into action. The
+            demon ship was closing fast.
+            </p>
+            <p>
+            Within moments, a pre-emptive strike was launched upon the demon
+            ship. Calling upon Iolensis, Aldoon brought destructive power onto
+            the bow of the enemy ship, blasting a hole in its hull and
+            destroying two demons in the explosion. Verthandi followed suit,
+            filling the foredecks of the ship with abhorrent purplish vines
+            which boasted vicious barbed spikes. The scene soon disappeared
+            from view however, as Elusurm, the Broken Man, shrouded the
+            encroaching deck with impenetrable darkness.
+            </p>
+            <p>
+            Meanwhile, Feuriel had found her quarry: the shadow demon who led
+            the enemy forces. A wicked grin spread across her face as a
+            perverse mix of righteousness and bloodlust welled up within her at
+            the thought of vanquishing demons again. She flexed her wings, as
+            was her habit in her prior existence, and this time, the charred
+            stumps of past glory sprang to new life, growing outward into fully
+            fledged angelic wings. She wouldn’t notice until later that her
+            wings were different now, dark shadows of her former glory. She
+            took to the air to close with her foe.
+            </p>
+            <p>
+            Waves of thunder, blasts of eldritch energy, magical stones, and a
+            repeating barrage of crossbow bolts careened across the deck,
+            spanning the narrowing gap between the two ships, and slaying demon
+            after demon as the volleys found their marks.
+            </p>
+            <p>
+            Again, Aldoon called upon Iolensis, and again she answered, as a
+            powerful gust of wind erupted from the loxodon, blasting into the
+            oncoming ship and pushing it backward. This delayed the demons’
+            boarding plan, and allowed the team of misfits to continue their
+            offensive unchallenged.
+            </p>
+            <p>
+            However, the demonic ship was not propelled by winds nor buoyed by
+            seaworthiness as a normal ship would be, but by ill omen, by the
+            otherworldly will of the merrenoloth. The ship continued to close.
+            </p>
+            <p>
+            Lost in the fantasy of being something she no longer was, Feuriel
+            charged the shadow demon. She called forth her angelic power to
+            project a beam of radiance from her sword to her foe, but she
+            instead got a crackling hellfire which erupted from her arm,
+            charring her flesh and missing its target. She dug deeper into her
+            conviction and ignited her sword with a sacred energy that would
+            surely vanquish this affront to her order! Yet, as she brought her
+            blade through the demon, although the radiant steel sliced a
+            glowing gash through its dark, astonished body, the demon still
+            lived. What was this blasphemy? Where had her power gone? Who was
+            she?
+            </p>
+            <p>
+            And then she remembered, that she didn’t know anymore who she was,
+            who she served, or what her purpose was at all.
+            </p>
+            <p>
+            Dejected, she let her sword fall limply to her side as, from behind
+            her, she heard her devout ally Aldoon call again to his goddess,
+            who again answered resoundingly. In front of her, the shadow demon
+            exploded into a golden cloud of glitter and was no more.
+            </p>
+            <p>
+            Around her, the chaos of the battle intensified. Quasits, small
+            bat-like demons, had been released from their cages by the
+            merrenoloth, and now they surged around Feuriel and her allies.
+            Thunder, eldritch blasts, magical projectiles and faerie fires
+            pounded her ears and flashed across her eyes as demons were
+            obliterated left and right. Her allies clearly had mastered their
+            new bodies, their new skills and abilities, their new lives.
+            </p>
+            <p>
+            Finding a memory, a spark of hope, Feuriel recited a cherished
+            prayer, <em>“Yea though I walk through the valley of the shadow of
+            death, I will fear no evil, for thou art with me...”</em>
+            </p>
+            <p>
+            But her hope was extinguished, her faith challenged again, as a
+            trio of quasits set upon her, ignoring her defensive prayer and
+            tearing her to pieces. She felt their poison seep into her black
+            veins. She almost welcomed it. What is one more death anyway? But
+            she couldn’t let go. From somewhere--was it Torm or was it her own
+            resolve--she found she still had fight in her. She pushed through
+            the poison and cleaved her sword through the remaining quasit that
+            her allies hadn’t picked off of her.
+            </p>
+            <p>
+            She regained her focus and sought out the merrenoloth, who had
+            suffered greatly from Elusurm’s relentless eldritch barrage, yet as
+            she turned her attention to it, it erupted in another deadly
+            showcase of Iolenthis’s splendor, wielded by Aldoon. Feuriel envied
+            the cleric.
+            </p>
+            <p>
+            The battle was almost over now. Only a few dretch remained, and two
+            quasits that were fleeing the scene.  Orgoth’s deckhands helped
+            Crokiak and Verthandi finish off the dretch, while Elusurm blasted
+            one of the escaping quasits to bits. Feuriel took aim at the other.
+            Again, her god failed her. The quasit shrugged off the paltry fire
+            she evoked and kept flying. It was of course Aldoon who was able to
+            smite it. Iolensis sent a beam of heavenly flame, down from the
+            very skies of Hell in fact, as a gift to her devoted follower.
+            </p>
+            <p>
+            It was just too much. Relieved to have survived, but feeling more
+            alone than she had ever felt, Feuriel let her wings carry her back
+            to the ship’s sterncastle. It was then that she noticed her wings
+            were not the luxurious white feathers of a swan, but were the
+            greasy black tatters of vulture wings.  Black feathers littered the
+            deck.  They were hers. She fell to her knees, and then collapsed
+            into a heap, sobbing. Her feathers continued to fall out as she
+            wept, uncontrollably, until her wings were just bare stubs again.
+            </p>
+            <p>
+            <em>“Why?”</em> she whimpered, over and over.
+            </p>
+            <p>
+            No one answered.
+            </p>
         </div>
     </body>
 </html>
