--- a/index.html
+++ b/index.html
@@ -3460,6 +3460,36 @@ h5 {
             <p>
             No one answered.
             </p>
+
+            <h3 class="break">Week 9 - Skirmish in the Scribery</h3>
+            <strong><em>as observed by ?? </em></strong>
+
+            <h3 class="break">Week 10 - Teelo's Run</h3>
+            <strong><em>From the journal of Captain Teelo Rence (NPC)</em></strong>
+            <p>It has now been several days since my capture by the forces of the enemy, although perhaps it's weeks?  Months?  Does time move differently here?  The attack did not go as planned.  The rank and file of the devil army is predictable, if anything, and our raid on the enemy supply line should have fared as well the others that came before it.  This time was different.  It seems a higher intelligence has taken over their operations and they baited us into an ambush.  I should have known.  How many of my Fae friends lie dead now from my own failure.  I must make amends to Her.</p>
+            <hr />
+            <p>I had been expecting nothing but torture, pain, interrogation, and damnation from the denizens of this place.  In that order.  Yet I have received only occasional beatings and humiliation from the guards so far.  They evidently do not know my rank, and I continue to feign not knowing to where I have been consigned.  Continue to play the role of the dumb soldier, and you may just buy yourself enough time to find a way out of here.</p>
+            <hr />
+            <p>I cannot expect any rescue efforts to be made on my behalf this far into the bowels of the enemy's home territory.  I must make my own escape, though how?  I cannot commune with Her while under the watch of the guards.  I could probably overcome them, but those hellhounds would tear me to shreds within moments.  I will meditate and contemplate this further.</p>
+            <hr />
+            <p>Opportunity knocks,  I have awoken to discover the guards cursing the hellhounds absence.  They appear to have departed while I slept and have not returned.  One of the guards has left swearing he'll make a hellhound skin cloak when he finds them.</p>
+            <hr />
+            <p>Opportunity indeed.  I was able to overcome the guard, yet upon departing the cell I find myself among the oddest collections of creatures I have ever seen (and odd creatures are my specialty), yet they were obviously not guards.  Killers yes, but not of this place, and not hostile to me.  Gods, they even travel with an Illithid.</p>
+            <p>I continued my charade, as they appeared to have the run of the place.  Mercenaries?  No.  Prisoners?  Unlikely.  Damned?  Hard to tell.  I will continue to play my role until, gods willing, I make it out of here.</p>
+            <hr />
+            <p>While still suspicious of me, they appear to take me for the dullard I portray.  There is no harm in this, my ego can take the slights and it's all in the name of the cause anyway.  I had hoped I could find somewhere quiet to invoke the ritual of communion, but I do not believe I could slip away from them at the moment.  Besides, they do not appear to be pleased to be in this place either.  Perhaps they would make useful allies if we can escape.  I can sense good among them, as well as evil, but every tool has it's use and it's purpose.</p>
+            <hr />
+            <p>Their suspicions dwindle, along with their discresion.  I have overheard much, including the fortuidous circumstances leading to my escape.  It seems that the hell hounds had left in order to consume some sort of gnome librarians with whom they were familiar.  The green one in particular (a Gith of some sort?  Githzerai most likely.) appears upset that "he couldn't fix that".  Not an infernal sentiment to have.</p>
+            <p>From what I can piece together, they had battled these hellhounds within a library, ultimately slaying all of the devilish dogs.  An impressive feat, and my confidence that I can recruit them to the cause grows.  In fact two of them, a Loxodon and another of a type even I have never witnessed (some sort of intelligent golem?) discuss between them what they hope will become of some slaves they had freed.  They appear genuinely concerned for their welfare.</p>
+            <p>The Illithid is silent, saying nothing.  From what the others say amongst themselves this creature had been strategically critical in their fight against the hellhounds.  I must remain wary of this one, Gods know the cause could use any help it can get, yet I know their cooperation would last only as long as the mutual alignment of our goals.</p>
+            <p>Strangest of all to find in this place is some sort of Celestial.  I am yet to ascertain exactly how this is possible, though they appear to be undergoing an existential crisis.  I sense anger, doubt, and envy from them.  They stand on the edge of an abyss, but perhaps recruiting them for the cause will give them an anchor and standard for which them to rally their faith.</p>
+            <p>The Harengon, "Bandito" they call him, and the Drow Baloth want to visit some sort of market or bazaar.  While a distraction from my goal, I can use the opporunity to rearm myself.  But I must eventually find a quiet place to commune.  Perhaps they know of one.</p>
+            <hr />
+            <p>Rearmed, I am beginning to feel whole again.  My fellows, while nefarious in aspect appear to have a generous and even somewhat honorable nature.  Not at all what I expected to find.  Now some of them tire, and seek to rest.  I will use this opportunity to commune with Her.</p>
+            <hr />
+            <p>I am home.  The communion ritual was successful, and She brought me through to the Grove along with the others.  I felt as though something back there was resisting my efforts, but what can you expect from the infernal realm.  In the end it matters not.  I am home.  Judging by the sun, we will not reach Mythras by nightfall and will have to make camp.  There is a clearing I know some miles from the Hedge where we can stop and rest.  Undoubtadly we will be attacked by those graceful beasts of the night, but I want to see how my new companions can handle themselves.  They've put on a show of defeating infernals, but if they can survive a real fight then they may just be what we need to tip the balance in our favor.</p>
+            <hr />
+            <p>They are worthy.  I must bring them to Her and recruit them to the cause.</p>
         </div>
     </body>
 </html>
