Add week 12 epilogue

--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@ h3.break {
     column-span: all;
 }
 
+h4.break {
+    margin-top: 2em;
+    column-span: all;
+}
+
 img.hero {
     column-span: all;
     width: 100%;
@@ -3636,6 +3641,30 @@ h5 {
             <p>It was at this moment this battle turned from even odds to a slaughter....the scenes Bandito could see were like nightmares, though heavenly nightmares....with the fallen angel showing her fury like he hadn't seen in some time, and literally slashing two kobolds clean in HALF!!  One of the kobolds seems to be on our side now and is attacking the wolves...and Aldoon continues to very very loudly exterminate the foes and blasts from the darkness flashing across the battle scene with enemies beginning to fall left and right all around Bandito. He smiles....this is starting to feel like power...power he wouldn't be controlled by, but power he could partner with...</p>
 
             <p>And through his smiling eyes, he saw the end of each of the enemies...<i>oh wait - there is a blue wolf running away!</i> FLIP - a blue glowing energy dagger goes flying across the scene...striking the wolf, and it falls dead. His small arms high in the air in victory. In his mind, though...as he was panting there...he knew they were closer to devastation than he cared for...<i>perhaps they should have stayed the night behind the waterfall...</i></p>
+            <h4 class="break">epilogue to week 12 <em>- Feugue State (by Jay Pancoast)</em></h4>
+            <em>
+                <p>Feuriel hadn't been herself since the Hell Hounds in the Scribery. If that can be said of a bipolar schizophrenic.</p>
+
+                <p>Taken down by the ferocity of the infernal hounds, Feuriel came crashing to the floor of the scribery. She was plunged again into the dark gray void, reminiscent of her Fall from Grace. Her consciousness acquiesced. "What will it be this time?" she wondered dispassionately.</p>
+
+                <p>And then she saw a bright light, beckoning her. Directly opposite the light, she saw a deep darkness. It too beckoned her, in a tantalizing manner. She turned toward the darkness, accepting its embrace, and yet it would not comfort her, for at that instant a powerful force pulled her from it, yanking her toward the light. It was Aldoon.</p>
+
+                <p>She regained her sight. The benevolent loxodon was crouched over her as he completed his prayer of healing. He had saved her, and his Goddess Iolensis had allowed it. Was this a blessing, or a curse, that Feuriel should exist for longer in this wretched form in Hell?</p>
+
+                <p>Her sight and consciousness had returned to her broken body, but Feuriel's mind--her soul if she could say she had one--had not returned. She stared blankly at Aldoon and got to her feet, saying nothing. Her eyes were glassy and her irises a pure black that matched her pupils.</p>
+
+                <p>.....</p>
+
+                <p>She remained in this trance-like state for days to follow. Her actions were mechanical, automatic. She said very little if anything to her companions during this time. It was as if she was under the control of some vast power, a being which used her--half-heartedly--as an instrument of his will, in a manner with little meaning or purpose.</p>
+
+                <p>The automaton, Mel, had more life, more freewill, and more emotion than did Feuriel during this time. Although she accompanied her band of conscripts on their exploits into the fey realm, the fallen angel was distant and detached. She lacked the intensity, the fight, the moods, the conviction, that her companions had grown to expect from her. She had simply accepted her fate, having given in to the destiny that governed her.</p>
+
+                <p>She lived only in the present, uncaring and unthinking, yet she relished the moments as her sword cleaved through the kobolds in front of her. Were they friend or foe? She didn't know. How did she get here, and was there a reason? She didn't know and she didn't care. Would there be consequences in the future? She didn't care.</p>
+
+                <p>At length Feuriel would be feared or loved, appreciated or ignored, rewarded or punished. It mattered not at all to her. What will be, will be. Acceptance: the final stage of her grief.</p>
+
+                <p>Searching no longer for truth or meaning, she found herself strangely free. Her awareness returned, and sharpened. The vacant blackness left her eyes, replaced with burning gold. She served a master again, and her master this time was her own self.</p>
+            </em>
         </div>
     </body>
 </html>
