--- a/index.html
+++ b/index.html
@@ -3641,7 +3641,7 @@ h5 {
             <p>It was at this moment this battle turned from even odds to a slaughter....the scenes Bandito could see were like nightmares, though heavenly nightmares....with the fallen angel showing her fury like he hadn't seen in some time, and literally slashing two kobolds clean in HALF!!  One of the kobolds seems to be on our side now and is attacking the wolves...and Aldoon continues to very very loudly exterminate the foes and blasts from the darkness flashing across the battle scene with enemies beginning to fall left and right all around Bandito. He smiles....this is starting to feel like power...power he wouldn't be controlled by, but power he could partner with...</p>
 
             <p>And through his smiling eyes, he saw the end of each of the enemies...<i>oh wait - there is a blue wolf running away!</i> FLIP - a blue glowing energy dagger goes flying across the scene...striking the wolf, and it falls dead. His small arms high in the air in victory. In his mind, though...as he was panting there...he knew they were closer to devastation than he cared for...<i>perhaps they should have stayed the night behind the waterfall...</i></p>
-            <h4 class="break">epilogue to week 12 <em>- Feugue State (by Jay Pancoast)</em></h4>
+            <h4 class="break">Epilogue to weeks 9-12 <em>- Feugue State (by Jay Pancoast)</em></h4>
             <em>
                 <p>Feuriel hadn't been herself since the Hell Hounds in the Scribery. If that can be said of a bipolar schizophrenic.</p>
 
